# crypto-trading-bot

./: .env  Dockerfile  README.md  backtest_report.csv  config.example.yaml  config.yaml  docker-compose.yml  equity_curve.csv  pyproject.toml  requirements.txt
data/cache/: BTC_USD_1m_20240101T000000Z_20240131T000000Z.csv
src/: api.py  backtester.py  config.py  data.py  exchange.py  execution.py  logging_metrics.py  main.py  simulator.py  strategy.py
src/crypto_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_execution.py  test_strategy.py
